Enhance Admin components and API integration: add API testing script to package.json, refactor AdminLayout for improved state management and user experience, and update AdminDashboard to utilize Redux for fetching statistics and companies. Implement error handling in login process and streamline authentication flow with local storage management.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:api": "ts-node app/api-test.ts"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
@@ -27,6 +28,7 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "ts-node": "^10.9.2"
   }
 }
